Properly adjusted margin of content

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -52,16 +52,19 @@
             <br>
             <br>
 
-            <section>
-                <div class="text-left">
+            <div>
 
-                    University of Jeddah
-                    <br>
 
-                    <div class="content">Participated in several projects focused on process
-                        automation and
-                        digital transformation.
-                        <!-- <br>
+                <section class="contentMargin">
+                    <div class="text-left">
+
+                        University of Jeddah
+                        <br>
+
+                        <div class="content">Participated in several projects focused on process
+                            automation and
+                            digital transformation.
+                            <!-- <br>
                         1- Procedure Automation System for Planning Department
                         <br>
                         <div class="projectInfo">
@@ -85,64 +88,67 @@
                         </div>
 
                         <br> -->
-                        <!-- Details regarding these projects are confidential. -->
+                            <!-- Details regarding these projects are confidential. -->
+
+                        </div>
 
                     </div>
+                </section>
 
-                </div>
-            </section>
+                <br>
+                <hr>
+                <br>
 
-            <br>
-            <hr>
-            <br>
-
-            <section>
-                <div class="text-left">
-                    Online Game Store
-                    <br>
-                    <div class="content">
-                        Graduation project done as part of my study at the
-                        <a href="https://ipa.edu.sa/en-us/Pages/default.aspx" target="_blank">Institute of Public
-                            Administration.</a>
-                        Developed using .NET C# & SQL Database using the Master Page layout and functionality with an
-                        emphasis on responsive design.
-                        <a href="Portfolio/online-game-store.html">Project details</a>
-                    </div>
-
-                </div>
-            </section>
-
-            <br>
-            <hr>
-            <br>
-
-            <section>
-                <div id="Saeedo98" class="text-left">
-                    Personal Website
-                    <br>
-                    <div class="content">
-                        <a href="#">Saeedo98.com</a>
-                        <a href="https://github.com/Saeedo1998/Personal-Website" target="_blank">View on GitHub</a>
+                <section class="contentMargin">
+                    <div class="text-left">
+                        Online Game Store
+                        <br>
+                        <div class="content">
+                            Graduation project done as part of my study at the
+                            <a href="https://ipa.edu.sa/en-us/Pages/default.aspx" target="_blank">Institute of Public
+                                Administration.</a>
+                            Developed using .NET C# & SQL Database using the Master Page layout and functionality with
+                            an
+                            emphasis on responsive design.
+                            <a href="Portfolio/online-game-store.html">Project details</a>
+                        </div>
 
                     </div>
-                </div>
-            </section>
+                </section>
 
-            <br>
-            <hr>
-            <br>
+                <br>
+                <hr>
+                <br>
 
-            <section>
-                <div class="text-left">
-                    Beep Generator
-                    <br>
-                    <div class="content">
-                        A simple C# console app that generates beeps based on a predefined set of programs.
-                        <a href="https://github.com/Saeedo1998/Beep-Generator" target="_blank">View on GitHub</a>
+                <section class="contentMargin">
+                    <div id="Saeedo98" class="text-left">
+                        Personal Website
+                        <br>
+                        <div class="content">
+                            <a href="#">Saeedo98.com</a>
+                            <a href="https://github.com/Saeedo1998/Personal-Website" target="_blank">View on GitHub</a>
 
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
+
+                <br>
+                <hr>
+                <br>
+
+                <section class="contentMargin">
+                    <div class="text-left">
+                        Beep Generator
+                        <br>
+                        <div class="content">
+                            A simple C# console app that generates beeps based on a predefined set of programs.
+                            <a href="https://github.com/Saeedo1998/Beep-Generator" target="_blank">View on GitHub</a>
+
+                        </div>
+                    </div>
+                </section>
+
+            </div>
 
             <br>
             <br>
