--- a/Index.html
+++ b/Index.html
@@ -107,123 +107,125 @@
                 <br>
                 <div class="container">
                         <br>
-                        <section class="about-section">
-                                <div class="header">About</div>
-                                <div class="content">
-                                        Web Developer / Programmer based in Jeddah, Saudi Arabia working on Full
-                                        Stack Web Development
-                                        specialized in .NET C# Web App Development. <br>
-                                        Currently learning WPF & Unity Game Development on my free time.
+                        <div class="">
+                                <section class="about-section contentMargin">
+                                        <div class="header">About</div>
+                                        <div class="content">
+                                                Web Developer / Programmer based in Jeddah, Saudi Arabia working on Full
+                                                Stack Web Development
+                                                specialized in .NET C# Web App Development. <br>
+                                                Currently learning WPF & Unity Game Development on my free time.
+
+                                        </div>
+                                </section>
+                                <br>
+                                <hr>
+                                <br>
+
+                                <div class="hidden">
+                                        <span class="content">
+                                                I do Web Development (Programming & Design), and in my free time I do
+                                                Video
+                                                & Image Editing and also sometimes 3D Modeling.
+                                                <br>
+                                                <br>
+                                        </span>
+                                        <span class="content">
+                                                Some of my work:
+                                        </span>
 
                                 </div>
-                        </section>
-                        <br>
-                        <hr>
-                        <br>
 
-                        <div class="hidden">
-                                <span class="content">
-                                        I do Web Development (Programming & Design), and in my free time I do
-                                        Video
-                                        & Image Editing and also sometimes 3D Modeling.
-                                        <br>
-                                        <br>
-                                </span>
-                                <span class="content">
-                                        Some of my work:
-                                </span>
+                                <section class="contentMargin">
+                                        <div class="text-left">
+                                                <span class="header">Skills</span>
+                                                <br />
 
-                        </div>
-
-                        <section>
-                                <div class="text-left">
-                                        <span class="header">Skills</span>
-                                        <br />
-
-                                        <span class="subHeader">Web Development</span>
-                                        <br />
-                                        <div class="content">
-                                                <div class="oval">
-                                                        Responsive Design
-                                                </div>
-                                                <div class="oval">
-                                                        Web Forms
-                                                </div>
-                                                <div class="oval">
-                                                        MVC
-                                                </div>
-                                                <!-- <div class="oval">
+                                                <span class="subHeader">Web Development</span>
+                                                <br />
+                                                <div class="content">
+                                                        <div class="oval">
+                                                                Responsive Design
+                                                        </div>
+                                                        <div class="oval">
+                                                                Web Forms
+                                                        </div>
+                                                        <div class="oval">
+                                                                MVC
+                                                        </div>
+                                                        <!-- <div class="oval">
                                                         Razor
                                                 </div>
                                                 <div class="oval">
                                                         Blazor
                                                 </div> -->
 
-                                        </div>
+                                                </div>
 
-                                        <span class="subHeader">Database</span>
-                                        <br>
+                                                <span class="subHeader">Database</span>
+                                                <br>
+                                                <div class="content">
+                                                        <div class="oval">
+                                                                SQL
+                                                        </div>
+                                                        <div class="oval">
+                                                                Microsoft SQL Server Management Studio
+                                                        </div>
+                                                        <div class="oval">
+                                                                Oracle Database Express Edition
+                                                        </div>
+                                                </div>
+
+                                                <span class="subHeader">Programming Languages</span>
+                                                <br>
+                                                <div class="content">
+                                                        <div class="oval">
+                                                                C#
+                                                        </div>
+                                                        <div class="oval">
+                                                                Java
+                                                        </div>
+                                                        <div class="oval">
+                                                                JavaScript
+                                                        </div>
+                                                        <div class="oval">
+                                                                TypeScript
+                                                        </div>
+                                                </div>
+
+                                        </div>
+                                </section>
+                                <br>
+                                <hr>
+                                <br>
+                                <section class="contentMargin">
+                                        <div class="header">Resume</div>
                                         <div class="content">
-                                                <div class="oval">
-                                                        SQL
-                                                </div>
-                                                <div class="oval">
-                                                        Microsoft SQL Server Management Studio
-                                                </div>
-                                                <div class="oval">
-                                                        Oracle Database Express Edition
-                                                </div>
-                                        </div>
-
-                                        <span class="subHeader">Programming Languages</span>
-                                        <br>
-                                        <div class="content">
-                                                <div class="oval">
-                                                        C#
-                                                </div>
-                                                <div class="oval">
-                                                        Java
-                                                </div>
-                                                <div class="oval">
-                                                        JavaScript
-                                                </div>
-                                                <div class="oval">
-                                                        TypeScript
-                                                </div>
-                                        </div>
-
-                                </div>
-                        </section>
-                        <br>
-                        <hr>
-                        <br>
-                        <section>
-                                <div class="header">Resume</div>
-                                <div class="content">
-                                        <!-- <a target="_blank"
+                                                <!-- <a target="_blank"
                                                 href="Files/Saeed Badghaish CV - Full Stack Web Developer.pdf">View
                                         </a> -->
 
-                                        <!-- <a target="_blank"
+                                                <!-- <a target="_blank"
                                                 href="https://media-exp1.licdn.com/dms/document/C4D2DAQEyV-cpH97qcg/profile-treasury-document-pdf-analyzed/0/1635963106768?e=1637870400&v=beta&t=FdSl6Sz2zvZdP9bxhBj6uQFgi8j0wwHvlGvBAiCrNpQ">
                                                 LinkedIn
                                         </a> -->
-                                        <br>
-                                        <a target="_blank"
-                                                href="Files/Saeed Badghaish CV - Full Stack Web Developer.docx">
-                                                DOCX
-                                        </a>
-                                        <br>
-                                        <a target="_blank"
-                                                href="Files/Saeed Badghaish CV - Full Stack Web Developer.pdf">
-                                                PDF
-                                        </a>
+                                                <br>
+                                                <a target="_blank"
+                                                        href="Files/Saeed Badghaish CV - Full Stack Web Developer.docx">
+                                                        DOCX
+                                                </a>
+                                                <br>
+                                                <a target="_blank"
+                                                        href="Files/Saeed Badghaish CV - Full Stack Web Developer.pdf">
+                                                        PDF
+                                                </a>
 
-                                </div>
-                        </section>
-                        <br>
-                        <br>
-                        <br>
+                                        </div>
+                                </section>
+                                <br>
+                                <br>
+                                <br>
+                        </div>
 
                         <footer-saeed></footer-saeed>
 
