Added loading spinner project

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -148,6 +148,22 @@
                     </div>
                 </section>
 
+                <br>
+                <hr>
+                <br>
+
+                <section class="contentMargin">
+                    <div class="text-left">
+                        Loading Spinner
+                        <br>
+                        <div class="content">
+                           Simple loading spinner made with C# console application.
+                            <a href="https://github.com/Saeedo1998/Loading-Spinner" target="_blank">View on GitHub</a>
+
+                        </div>
+                    </div>
+                </section>
+
             </div>
 
             <br>
