--- a/css-playground.html
+++ b/css-playground.html
@@ -253,26 +253,30 @@
                                         <div class="header">Animations</div>
                                         <br>
                                         <div class="row">
-                                                <div class="col-6">
+
+                                                <div class="col-md-6">
                                                         This is a <span class="breath">Breathing</span> text.
+                                                        <br>
+                                                        <br>
+                                                        <div class="noShadow content">
+                                                                CSS:
+
+                                                                <script
+                                                                        src="https://gist.github.com/Saeedo1998/dfca32bb228edfe7855be26f55b6e126.js"></script>
+                                                        </div>
                                                 </div>
-                                                <div class="col-6">
+                                                <br>
+
+                                                <div class="col-md-6">
                                                         This is a <span class="heartbeat">Beating</span> text.
-                                                </div>
-                                        </div>
-                                        <br>
-                                        <div class="row noShadow content">
-                                                <div class="col-6">
-                                                        CSS:
+                                                        <br>
+                                                        <br>
+                                                        <div class="noShadow content">
+                                                                CSS:
 
-                                                        <script
-                                                                src="https://gist.github.com/Saeedo1998/dfca32bb228edfe7855be26f55b6e126.js"></script>
-                                                </div>
-                                                <div class="col-6">
-                                                        CSS:
-
-                                                        <script
-                                                                src="https://gist.github.com/Saeedo1998/a716a863efeab3c5002ce6bf5db94d40.js"></script>
+                                                                <script
+                                                                        src="https://gist.github.com/Saeedo1998/a716a863efeab3c5002ce6bf5db94d40.js"></script>
+                                                        </div>
                                                 </div>
                                         </div>
                                 </section>
