Added beep generator demo

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -140,11 +140,25 @@
                     <div class="text-left">
                         Beep Generator
                         <br>
-                        <div class="content">
-                            A simple C# console app that generates beeps based on a predefined set of programs.
-                            <a href="https://github.com/Saeedo1998/Beep-Generator" target="_blank">View on GitHub</a>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="content">
+                                    A simple C# console app that generates beeps based on a predefined set of programs.
+                                    <br>
+                                    <a href="https://github.com/Saeedo1998/Beep-Generator" target="_blank">View on GitHub</a>
+        
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="iframe-container">
 
+                                    <iframe src="https://www.youtube.com/embed/mSinPPAEvhE"
+                                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                                encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                            </div>
                         </div>
+                        
                     </div>
                 </section>
 
@@ -168,9 +182,8 @@
                                 <div class="col-md-6">
                                     <div class="iframe-container">
                                         <iframe src="https://www.youtube.com/embed/UWqUzjbSdGg"
-                                            title="YouTube video player" frameborder="0" allow="accelerometer; 
-                                        autoplay; clipboard-write; encrypted-media; 
-                            gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+                                             encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
 
                                 </div>
