Added seperate stylesheet for css-playground.html

--- a/css-playground.html
+++ b/css-playground.html
@@ -36,6 +36,7 @@
         <script src="Footer.js"></script>
 
         <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="Playground.css">
 
         </style>
 
