Added pulsing animation

--- a/css-playground.html
+++ b/css-playground.html
@@ -280,6 +280,25 @@
                                                         </div>
                                                 </div>
                                         </div>
+
+                                        <div class="row" hidden>
+
+                                                <div class="col-md text-center">
+                                                        <span class="pulseText">Pulse</span>
+                                                        <br>
+                                                        <div class="pulse"></div>
+                                                        <br>
+                                                        <br>
+                                                        <div class="noShadow content">
+                                                                CSS:
+
+                                                                <script
+                                                                        src="https://gist.github.com/Saeedo1998/dfca32bb228edfe7855be26f55b6e126.js"></script>
+                                                        </div>
+                                                </div>
+                                                <br>
+
+                                        </div>
                                 </section>
 
                         </div>
