--- a/Index.html
+++ b/Index.html
@@ -130,7 +130,7 @@
                                                 Web Developer / Programmer based in Jeddah, Saudi Arabia working on Full
                                                 Stack Web Development
                                                 specialized in .NET C# Web App Development. <br>
-                                                Currently learning WPF & Unity Game Development on my free time.
+                                                Learning WPF & Unity Game Development on my free time.
 
                                         </div>
                                 </section>
