Home page update, CV and title

--- a/Index.html
+++ b/Index.html
@@ -104,10 +104,10 @@
                                 Saeed Badghaish
                                 <br />
                                 <span class="subTitle">
-                                        Full Stack Web Developer @ University of Jeddah
+                                        TechOps & Support Engineer @ Sumerge
                                         <br>
                                         <i class="fa fa-globe"></i>
-                                        &nbsp; Jeddah, Saudi Arabia
+                                        &nbsp; Riyadh, Saudi Arabia
 
                                 </span>
                                 <br>
@@ -127,10 +127,9 @@
                                 <section class="about-section contentMargin">
                                         <div class="header">About</div>
                                         <div class="content">
-                                                Web Developer / Programmer based in Jeddah, Saudi Arabia working on Full
-                                                Stack Web Development
-                                                specialized in .NET C# Web App Development. <br>
-                                                Learning WPF & Unity Game Development on my free time.
+                                                Web Developer / Programmer based in Riyadh, Saudi Arabia working as a TechOps & Support Engineer
+                                                <!-- specialized in .NET C# Web App Development. <br> -->
+                                                <!-- Learning WPF & Unity Game Development on my free time. -->
 
                                         </div>
                                 </section>
@@ -157,9 +156,23 @@
                                                 <span class="header">Skills</span>
                                                 <br />
 
+                                                <!-- <span class="subHeader">Support</span>
+                                                <br />
+                                                <div class="content">
+                                                        <div class="oval">
+                                                                Investigation
+                                                        </div>
+                                                        <div class="oval">
+                                                                Problem Solving
+                                                        </div>
+                                                </div> -->
+
                                                 <span class="subHeader">Web Development</span>
                                                 <br />
                                                 <div class="content">
+                                                        <div class="oval">
+                                                                Microservices
+                                                        </div>
                                                         <div class="oval">
                                                                 Responsive Design
                                                         </div>
@@ -227,12 +240,12 @@
                                         </a> -->
                                                 <br>
                                                 <a target="_blank"
-                                                        href="Files/Saeed Badghaish CV - Full Stack Web Developer.docx">
+                                                        href="Files\Saeed Badghaish CV - TechOps & Support Engineer.docx">
                                                         DOCX
                                                 </a>
                                                 <br>
                                                 <a target="_blank"
-                                                        href="Files/Saeed Badghaish CV - Full Stack Web Developer.pdf">
+                                                        href="Files\Saeed Badghaish CV - TechOps & Support Engineer.pdf">
                                                         PDF
                                                 </a>
 
