--- a/Portfolio.html
+++ b/Portfolio.html
@@ -53,7 +53,30 @@
             <br>
 
             <div>
+                <section class="contentMargin">
+                    <div class="text-left">
+                        Sumerge
 
+                        <div class="content">
+                            National Corporate Social Responsibility Platform (CSR) - MHRSD
+                            <br>
+                            المنصة الوطنية للمسؤولية الاجتماعية للشركات
+                            <br>
+
+                            <a href="https://csr.gov.sa">https://csr.gov.sa</a>
+                            <br>
+                            Participated in the launch of the platform & provided support and assistance during it's launch phase. 
+                            <br>
+                            Provide assistance to customer problems & investigate issues & provide fixes, as well as escalating the issue and communicating
+                             with the development and infrastructure teams if necessary 
+                        </div>
+
+                    </div>
+                </section>
+
+                <br>
+                <hr>
+                <br>
 
                 <section class="contentMargin">
                     <div class="text-left">
@@ -61,7 +84,7 @@
                         University of Jeddah
                         <br>
 
-                        <div class="content">Participated in several projects focused on process
+                        <div class="content">Participated in various projects focused on process
                             automation and
                             digital transformation.
                             <!-- <br>
@@ -99,6 +122,7 @@
                 <hr>
                 <br>
 
+                For Fun / Personal
                 <section class="contentMargin">
                     <div class="text-left">
                         Online Game Store
@@ -145,20 +169,21 @@
                                 <div class="content">
                                     A simple C# console app that generates beeps based on a predefined set of programs.
                                     <br>
-                                    <a href="https://github.com/Saeedo1998/Beep-Generator" target="_blank">View on GitHub</a>
-        
+                                    <a href="https://github.com/Saeedo1998/Beep-Generator" target="_blank">View on
+                                        GitHub</a>
+
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="iframe-container">
 
-                                    <iframe src="https://www.youtube.com/embed/mSinPPAEvhE"
-                                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                                    <iframe src="https://www.youtube.com/embed/mSinPPAEvhE" title="YouTube video player"
+                                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
                                 encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
-                        
+
                     </div>
                 </section>
 
