--- a/Index.html
+++ b/Index.html
@@ -104,7 +104,7 @@
                                 Saeed Badghaish
                                 <br />
                                 <span class="subTitle">
-                                        TechOps & Support Engineer @ Sumerge
+                                        Staff TechOps & Support Engineer @ Sumerge
                                         <br>
                                         <i class="fa fa-globe"></i>
                                         &nbsp; Riyadh, Saudi Arabia
