--- a/Index.html
+++ b/Index.html
@@ -127,7 +127,9 @@
                                 <section class="about-section contentMargin">
                                         <div class="header">About</div>
                                         <div class="content">
-                                                Web Developer / Programmer based in Riyadh, Saudi Arabia working as a TechOps & Support Engineer
+                                                Software Engineer based in Riyadh, Saudi Arabia.
+                                                <br/>
+                                                Currently working as a Staff TechOps & Support Engineer
                                                 <!-- specialized in .NET C# Web App Development. <br> -->
                                                 <!-- Learning WPF & Unity Game Development on my free time. -->
 
