--- a/Index.html
+++ b/Index.html
@@ -168,28 +168,40 @@
                                                                 Problem Solving
                                                         </div>
                                                 </div> -->
-
-                                                <span class="subHeader">Web Development</span>
+                                                <span class="subHeader">DevOps</span>
                                                 <br />
                                                 <div class="content">
                                                         <div class="oval">
                                                                 Microservices
                                                         </div>
                                                         <div class="oval">
+                                                                CI/CD
+                                                        </div>
+                                                        <div class="oval">
+                                                                Kubernetes
+                                                        </div>
+                                                        
+                                                <!--<div class="oval">
+                                                        Blazor
+                                                </div>--> 
+
+                                                </div>
+
+                                                <span class="subHeader">Web Development</span>
+                                                <br />
+                                                <div class="content">
+                                                        <div class="oval">
                                                                 Responsive Design
                                                         </div>
                                                         <div class="oval">
-                                                                Web Forms
+                                                                Web Design
                                                         </div>
                                                         <div class="oval">
-                                                                MVC
+                                                                Production Pipelines
                                                         </div>
-                                                        <!-- <div class="oval">
-                                                        Razor
-                                                </div>
-                                                <div class="oval">
+                                                <!--<div class="oval">
                                                         Blazor
-                                                </div> -->
+                                                </div>--> 
 
                                                 </div>
 
