update skills web dev

--- a/Index.html
+++ b/Index.html
@@ -191,13 +191,10 @@
                                                 <br />
                                                 <div class="content">
                                                         <div class="oval">
-                                                                Responsive Design
+                                                                Responsive Web Design
                                                         </div>
                                                         <div class="oval">
-                                                                Web Design
-                                                        </div>
-                                                        <div class="oval">
-                                                                Production Pipelines
+                                                                Spring Boot
                                                         </div>
                                                 <!--<div class="oval">
                                                         Blazor
@@ -242,6 +239,7 @@
                                 <hr>
                                 <br>
                                 <section class="contentMargin">
+                                        <!--TO-DO: UPDATE MEEE-->
                                         <div class="header">Resume</div>
                                         <div class="content">
                                                 <!-- <a target="_blank"
