updated skills section

--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
         <script src="Navbar.js"></script>
         <script src="Footer.js"></script>
         <script src="Script.js"></script>
-        
+
         <link rel="stylesheet" href="Style.css">
 
         <!-- old scrapped code, moved to Script.js -->
@@ -128,7 +128,7 @@
                                         <div class="header">About</div>
                                         <div class="content">
                                                 Software Engineer based in Riyadh, Saudi Arabia.
-                                                <br/>
+                                                <br />
                                                 Currently working as a Staff TechOps & Support Engineer at Sumerge/HRSD
                                                 <!-- specialized in .NET C# Web App Development. <br> -->
                                                 <!-- Learning WPF & Unity Game Development on my free time. -->
@@ -157,80 +157,51 @@
                                         <div class="text-left">
                                                 <span class="header">Skills</span>
                                                 <br />
-
-                                                <!-- <span class="subHeader">Support</span>
+                                                <span class="subHeader">Analytical</span>
                                                 <br />
                                                 <div class="content">
-                                                        <div class="oval">
-                                                                Investigation
-                                                        </div>
-                                                        <div class="oval">
-                                                                Problem Solving
-                                                        </div>
-                                                </div> -->
+                                                        <div class="oval">Critical Thinking</div>
+                                                        <div class="oval">Problem Solving</div>
+                                                        <div class="oval">Root Cause Analysis</div>
+                                                </div>
+
+                                                <span class="subHeader">Technical Operations</span>
+                                                <br />
+                                                <div class="content">
+                                                        <div class="oval">Incident Management</div>
+                                                        <div class="oval">Troubleshooting</div>
+                                                        <div class="oval">Monitoring & Alerting</div>
+                                                </div>
+
                                                 <span class="subHeader">DevOps</span>
                                                 <br />
                                                 <div class="content">
-                                                        <div class="oval">
-                                                                Microservices
-                                                        </div>
-                                                        <div class="oval">
-                                                                CI/CD
-                                                        </div>
-                                                        <div class="oval">
-                                                                Kubernetes
-                                                        </div>
-                                                        
-                                                <!--<div class="oval">
-                                                        Blazor
-                                                </div>--> 
-
+                                                        <div class="oval">CI/CD Pipelines</div>
+                                                        <div class="oval">Containers & Kubernetes</div>
+                                                        <div class="oval">Version Control (Git)</div>
                                                 </div>
 
                                                 <span class="subHeader">Web Development</span>
                                                 <br />
                                                 <div class="content">
-                                                        <div class="oval">
-                                                                Responsive Web Design
-                                                        </div>
-                                                        <div class="oval">
-                                                                Spring Boot
-                                                        </div>
-                                                <!--<div class="oval">
-                                                        Blazor
-                                                </div>--> 
-
+                                                    <div class="oval">RESTful API Development</div>
+                                                    <div class="oval">Responsive Frontend UI</div>
+                                                    <div class="oval">Spring Boot / ASP.NET</div>
                                                 </div>
 
                                                 <span class="subHeader">Database</span>
                                                 <br>
                                                 <div class="content">
-                                                        <div class="oval">
-                                                                SQL
-                                                        </div>
-                                                        <div class="oval">
-                                                                Microsoft SQL Server Management Studio
-                                                        </div>
-                                                        <div class="oval">
-                                                                Oracle Database Express Edition
-                                                        </div>
+                                                        <div class="oval">Oracle SQL</div>
+                                                        <div class="oval">MS SQL Server</div>
                                                 </div>
 
                                                 <span class="subHeader">Programming Languages</span>
                                                 <br>
                                                 <div class="content">
-                                                        <div class="oval">
-                                                                C#
-                                                        </div>
-                                                        <div class="oval">
-                                                                Java
-                                                        </div>
-                                                        <div class="oval">
-                                                                JavaScript
-                                                        </div>
-                                                        <div class="oval">
-                                                                TypeScript
-                                                        </div>
+                                                        <div class="oval">Java</div>
+                                                        <div class="oval">C#</div>
+                                                        <div class="oval">JavaScript</div>
                                                 </div>
 
                                         </div>
