--- a/Index.html
+++ b/Index.html
@@ -184,9 +184,9 @@
                                                 <span class="subHeader">Web Development</span>
                                                 <br />
                                                 <div class="content">
-                                                    <div class="oval">RESTful API Development</div>
-                                                    <div class="oval">Responsive Frontend UI</div>
-                                                    <div class="oval">Spring Boot / ASP.NET</div>
+                                                        <div class="oval">RESTful API Development</div>
+                                                        <div class="oval">Responsive Frontend UI</div>
+                                                        <div class="oval">Spring Boot / ASP.NET</div>
                                                 </div>
 
                                                 <span class="subHeader">Database</span>
@@ -223,13 +223,14 @@
                                         </a> -->
                                                 <br>
                                                 <a target="_blank"
-                                                        href="Files\Saeed Badghaish CV - TechOps & Support Engineer.docx">
-                                                        DOCX
+                                                        href="Files\Saeed Badghaish CV - Staff TechOps & Support Engineer.pdf">
+                                                        PDF
                                                 </a>
                                                 <br>
+
                                                 <a target="_blank"
-                                                        href="Files\Saeed Badghaish CV - TechOps & Support Engineer.pdf">
-                                                        PDF
+                                                        href="Files\Saeed Badghaish CV - Staff TechOps & Support Engineer.docx">
+                                                        DOCX
                                                 </a>
 
                                         </div>
